Thu Jan 03 04:44:22 GMT 2013  Olly Betts <olly@survex.com>

	* commonhelp.cc: Tweak wording about default to match other options
	  better.

Thu Jan 03 04:07:57 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Note default size limit on files to index is unlimited.
	  Update --help to reflect that --sample-size now accepts the same
	  formats as --max-size).

Thu Jan 03 03:52:34 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: When generating a sample for a CSV file, limit the
	  reserved size to the CSV file size as sample_size could be set
	  really high by the user.

Thu Jan 03 03:46:46 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Tue Dec 18 04:49:41 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Fix typo in previous change (2>dev/null should be
	  2>/dev/null).

Tue Dec 18 03:48:36 GMT 2012  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Extend --filter to allow commands which
	  produce HTML on stdout to be specified with it.

Sun Dec 16 21:25:28 GMT 2012  Olly Betts <olly@survex.com>

	* diritor.cc: If libmagic hits ENOENT trying to classify a file, throw
	  FileNotFound so we quietly skip the file in non-verbose mode.

Sun Dec 16 21:23:25 GMT 2012  Olly Betts <olly@survex.com>

	* diritor.cc: MAGIC_MIME_TYPE was added in 4.22, so note that in the
	  comment about its conditional use.

Fri Dec 14 21:22:12 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am: In automake, INCLUDES is now deprecated in favour of
	  AM_CPPFLAGS so update to use the latter.

Fri Dec 14 04:45:12 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: If md5_file() fails with ENOENT, assume the file was
	  removed during indexing and only report this with --verbose as we
	  do in other such cases.

Fri Dec 14 04:42:34 GMT 2012  Olly Betts <olly@survex.com>

	* md5wrap.cc: If we get a read error while calculating the md5 checksum
	  of a file, fail rather than returning the checksum of the file up to
	  that point.
