@@ -4,7 +4,7 @@
  * Copyright 2001 James Aylett
  * Copyright 2001,2002 Ananova Ltd
  * Copyright 2002 Intercede 1749 Ltd
- * Copyright 2002,2003,2004,2005,2006,2007,2008,2009,2010,2011 Olly Betts
+ * Copyright 2002,2003,2004,2005,2006,2007,2008,2009,2010,2011,2013 Olly Betts
  * Copyright 2008 Thomas Viehmann
  *
  * This program is free software; you can redistribute it and/or
@@ -56,6 +56,7 @@
 #include "query.h"
 #include "cgiparam.h"
 #include "loadfile.h"
+#include "sample.h"
 #include "str.h"
 #include "stringutils.h"
 #include "transform.h"
@@ -913,6 +914,7 @@ CMD_time,
 CMD_topdoc,
 CMD_topterms,
 CMD_transform,
+CMD_truncate,
 CMD_uniq,
 CMD_unpack,
 CMD_unstem,
@@ -1035,6 +1037,7 @@ T(topdoc,	   0, 0, N, M), // first document on current page of hit list
 T(topterms,	   0, 1, N, M), // list of up to N top relevance feedback terms
 				// (default 16)
 T(transform,	   3, 3, N, 0), // transform with a regexp
+T(truncate,	   2, 4, N, 0), // truncate after a word
 T(uniq,		   1, 1, N, 0), // removed duplicates from a sorted list
 T(unpack,	   1, 1, N, 0), // convert 4 byte big endian binary string to a number
 T(unstem,	   1, 1, N, Q), // return list of probabilistic terms from
@@ -1993,6 +1996,12 @@ eval(const string &fmt, const vector<string> &param)
 		break;
 	    case CMD_transform:
 		omegascript_transform(value, args);
+		break;
+	    case CMD_truncate:
+		value = generate_sample(args[0],
+					string_to_int(args[1]),
+					args.size() > 2 ? args[2] : string(),
+					args.size() > 3 ? args[3] : string());
 		break;
 	    case CMD_uniq: {
 		const string &list = args[0];
