@@ -1,3 +1,8 @@
+Fri Jan 04 02:21:05 GMT 2013  Olly Betts <olly@survex.com>
+
+	* Makefile.am,docs/omegascript.rst,omindex.cc,query.cc,sample.cc,
+	  sample.h: Add $truncate command to break a string after a word.
+
 Thu Jan 03 04:44:22 GMT 2013  Olly Betts <olly@survex.com>
 
 	* commonhelp.cc: Tweak wording about default to match other options
